updated relative path

--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "homepage": "http://cod1r.github.io/calculator"
 }
