--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/calculator/",
+  "start_url": "/calculator",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
